--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <title>trip flight</title>
     </head>
     <body>
-        <div id="game"></div>
+        <div id="game" style="border: 1px solid #111; display: inline-block"></div>
         <div id="log"></div>
         <script src="js/hyne.js"></script>
+        <script src="js/yacopu.js"></script>
+        <script src="js/level.js"></script>
         <script src="js/game.js"></script>
         <script src="js/main.js"></script>
     </body>
