Added image and animations

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <title>trip flight</title>
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <div id="game" style="border: 1px solid #111; display: inline-block"></div>
+        <div id="div-game"></div>
         <div id="log"></div>
         <script src="js/hyne.js"></script>
         <script src="js/yacopu.js"></script>
