Added basic button functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
         <div id="div-game"></div>
         <div id="log"></div>
         <script src="js/hyne.js"></script>
+        
+        <script src="js/game.js"></script>
         <script src="js/yacopu.js"></script>
         <script src="js/level.js"></script>
-        <script src="js/game.js"></script>
+        <script src="js/button.js"></script>
+        
         <script src="js/main.js"></script>
     </body>
 </html>
