Separated game logic into individual files for each game mode

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <script src="js/level.js"></script>
         <script src="js/button.js"></script>
         
+        <script src="js/mode/title.js"></script>
+        <script src="js/mode/play.js"></script>
+        
         <script src="js/main.js"></script>
     </body>
 </html>
