Code cleaning and commenting

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <title>trip flight</title>
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <div id="div-game"></div>
-        <div id="log"></div>
         <script src="js/hyne.js"></script>
         
         <script src="js/game.js"></script>
