--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="js/yacopu.js"></script>
         <script src="js/level.js"></script>
         <script src="js/button.js"></script>
+        <script src="js/particle.js"></script>
         
         <script src="js/mode/title.js"></script>
         <script src="js/mode/stage_select.js"></script>
