Added images to buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <script src="js/mode/title.js"></script>
         <script src="js/mode/stage_select.js"></script>
-        <script src="js/mode/best_times.js"></script>
+        <script src="js/mode/records.js"></script>
         <script src="js/mode/about.js"></script>
         <script src="js/mode/play.js"></script>
         <script src="js/mode/results.js"></script>
