--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="js/level.js"></script>
     <script src="js/button.js"></script>
     <script src="js/particle.js"></script>
+    <script src="js/text.js"></script>
 
     <script src="js/mode/title.js"></script>
     <script src="js/mode/stage_select.js"></script>
