--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <script src="js/hyne.js"></script>
+    <script src="js/lib/hyne.js"></script>
 
     <script src="js/game.js"></script>
     <script src="js/yacopu.js"></script>
